fix: 修复自动拜访好友和日常奖励领取无法正常运行的问题 (#492)
SceneManager 的用法有改变。

## Summary by Sourcery

在 SceneManager 变更后，更新游戏玩法自动化流水线，以恢复自动好友访问和每日奖励领取功能。

Bug 修复：
- 通过调整 VisitFriends 流水线配置，修复自动好友访问流程。
- 通过更新 Tasks 和共享 Button 流水线配置，修复每日奖励领取流程。

增强：
- 添加共享的 Region 流水线配置，以支持自动化流程中更新后的场景或 UI 处理。

<details>
<summary>Original summary in English</summary>

## Summary by Sourcery

Update gameplay automation pipelines to restore automatic friend visits
and daily reward collection after SceneManager changes.

Bug Fixes:
- Fix automatic friend visit flow by adjusting VisitFriends pipeline
configuration.
- Fix daily rewards collection flow by updating Tasks and shared Button
pipeline configurations.

Enhancements:
- Add a shared Region pipeline configuration to support updated scene or
UI handling in automation flows.

</details>

--- a/assets/resource/pipeline/DailyRewards/Tasks.json
+++ b/assets/resource/pipeline/DailyRewards/Tasks.json
@@ -3,11 +3,20 @@
         "pre_delay": 0,
         "post_delay": 0,
         "next": [
-            "[JumpBack]SceneEnterWorldDijiang",
-            "PressEsc"
+            "PressEsc",
+            "[JumpBack]SceneEnterWorldDijiang"
         ]
     },
     "PressEsc": {
+        "desc": "在帝江号大世界按下Esc键打开菜单",
+        "recognition": {
+            "type": "And",
+            "param": {
+                "all_of": [
+                    "InDijiangWorld"
+                ]
+            }
+        },
         "action": {
             "type": "ClickKey",
             "param": {
